Adds a failing test, to be passed later