@@ -5,7 +5,6 @@ import static org.junit.jupiter.api.Assertions.*;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 class UsersTests {
@@ -14,13 +13,12 @@ class UsersTests {
     @DisplayName("A user has the expected id, name, and favourite colour")
     void expectedUserProperties() {
         // arrange
-        User user = new User();
+        User user = new User(1, "Beth", "red", 5);
         int expectedId = 1;
         String expectedName = "Beth";
         String expectedFavouriteColour = "Red";
 
         // act
-        user.setProperties(expectedId, expectedName, expectedFavouriteColour);
         int actualId = user.getId();
         String actualName = user.getName();
         String actualFavouriteColour = user.getFavouriteColour();
@@ -38,22 +36,38 @@ class UsersTests {
         UserProcessor userProcessor = new UserProcessor();
         ColourFinder colourFinder = new ColourFinder();
 
-        User user1 = new User();
-        User user2 = new User();
-        User user3 = new User();
+        User user1 = new User(1, "Player1", "red", 5);
+        User user2 = new User(2, "Player2", "blue", 5);
+        User user3 = new User(3, "Player3", "blue", 5);
 
-        user1.setProperties(1, "Player1", "red");
-        user2.setProperties(2, "Player2", "blue");
-        user3.setProperties(3, "Player3", "blue");
-
-
-        List<User> userList = Arrays.asList(user1, user2, user3);
-        List<User> expectedFilteredList = Arrays.asList(user2, user3);
+        List<User> userList = List.of(user1, user2, user3);
+        List<User> expectedFilteredList = List.of(user2, user3);
 
         // act
-        List<User> actualFilteredList = userProcessor.genericFilter(userList, colourFinder,"blue");
+        List<User> actualFilteredList =
+                userProcessor.genericFilter(userList, colourFinder,"blue");
         // assert
         assertEquals(expectedFilteredList, actualFilteredList);
+    }
+
+    @Test
+    @DisplayName("UserProcessor can transform the user details")
+    void UserProcessorCanTransformUserDetails() {
+        var user1 = new User(1, "Issy", "Burgundy", 5);
+        var user2 = new User(2, "Sixian", "Mustard", 5);
+        var user3 = new User(3, "Clarisa", "Light Blue", 5);
+
+        List<User> unfilteredUsers = List.of(user1, user2, user3);
+
+        var pointsTransformer = new PointsTransformer();
+
+        // act
+        List<User> actualFilteredUsers = UserProcessor.transformUser(unfilteredUsers, pointsTransformer);
+
+        // assert
+        assertEquals( 10, actualFilteredUsers.get(0).getPoints());
+        assertEquals(10, actualFilteredUsers.get(1).getPoints());
+        assertEquals(10, actualFilteredUsers.get(2).getPoints());
     }
 
 }
